Last header spacing fix.

--- a/app/assets/stylesheets/company_index.scss
+++ b/app/assets/stylesheets/company_index.scss
@@ -56,7 +56,7 @@
 
             &:last-child {
               width: 120px;
-              padding-left: 18px;
+              padding-left: 16px;
             }
 
             a {
